page icon update

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-   
+    <link rel="icon" href="http://example.com/favicon.png">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Sorting "
+      content="Buil by Satyam"
     />
+    <link rel="icon" href="https://img.icons8.com/nolan/50/area-chart.png">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
  
 
     <title>Bubble Sort</title>
